# recherno

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: cmake-multi-platform.yml
include/: api.h  condenser.h  deareator.h  emergencycorecooling.h  feedwater.h  impl.h  loop1.h  loop2.h  mainwindow.h  offlinecooling.h  reactor.h  reactorcontrolrods.h  systemsummary.h  turbine.h  turbinesupport.h  virtualmachine.h
src/: CMakeLists.txt  api.cpp  condenser.cpp  deareator.cpp  emergencycorecooling.cpp  feedwater.cpp  impl.cpp  loop1.cpp  loop2.cpp  main.cpp  mainwindow.cpp  offlinecooling.cpp  reactor.cpp  reactorcontrolrods.cpp  systemsummary.cpp  turbine.cpp  turbinesupport.cpp  virtualmachine.cpp
src/ui/: condenser.ui  deareator.ui  emergencycorecooling.ui  feedwater.ui  loop1.ui  loop2.ui  mainwindow.ui  offlinecooling.ui  reactor.ui  reactorcontrolrods.ui  systemsummary.ui  turbine.ui  turbinesupport.ui
